--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Hangman</title>
-	<style type="text/css" src="css/reset.css"></style>
-	<style type="text/css" src="css/style.css"></style>
-	<script type="text/javascript" src="game.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="javascript/game.js"></script>
 </head>
 <body>
-	
+	<div class="container">
+		<h1>Let's play Game of Thrones hangman</h1> 
+		<div>
+			<div id="wordSelect">
+				<h2>Length of word</h2>	
+			</div>
+		</div>	
+	</div>
 </body>
 </html>
