--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Cinzel+Decorative" rel="stylesheet">
+
 </head>
 <body>
 	<div class="container">
 		<h1>Let's play Game of Thrones hangman</h1> 
 		<div>
-			<div id="wordSelect">
-				<h2>Length of word</h2>	
-			</div>
+			<h2>Length of word</h2>	
+			<div id="wordSelect"></div>
 		</div>	
+		<div>
+			<h2>Selected keys: <span id=userChoice></span></h2>
+		</div>
+
 	</div>
-	
+
 	<script type="text/javascript" src="javascript/game.js"></script>
 </body>
 </html>
