--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 		<div>
 			<h2>Selected keys: <span id=userChoice></span></h2>
 		</div>
-
+		<div>
+			<p>All characters selected: <span id="alphaUsed"></span></p>
+		</div>
+		<div>
+			<p>Moves Left: <span id="movesLeft"></span></p>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="javascript/game.js"></script>
