game edits and background image added

--- a/index.html
+++ b/index.html
@@ -10,20 +10,37 @@
 
 </head>
 <body>
+	
+	<!--   
+	<div class="banner">
+		<img src="images/gameofthrones_banner.jpg" width="700px">
+	</div>
+	-->
+
 	<div class="container">
-		<h1>Let's play Game of Thrones hangman</h1> 
-		<div>
-			<h2>Length of word</h2>	
-			<div id="wordSelect"></div>
-		</div>	
-		<div>
-			<h2>Selected keys: <span id=userChoice></span></h2>
-		</div>
-		<div>
-			<p>All characters selected: <span id="alphaUsed"></span></p>
-		</div>
-		<div>
-			<p>Moves Left: <span id="movesLeft"></span></p>
+		<div class="rtsection">		
+
+			<div>
+				<h1>Let's play Game of Thrones hangman</h1> 
+			</div>		
+			<div>
+				<h2>Length of word</h2>	
+				<div id="wordSelect"></div>
+			</div>	
+			<div>
+				<h2>Selected keys: <span id=userChoice></span></h2>
+			</div>
+			<div>
+				<p>All characters selected: <span id="alphaUsed"></span></p>
+			</div>
+			<div>
+				<p>Moves Left: <span id="movesLeft"></span></p>
+			</div>
+		
+		</div> 
+
+		<div class="lftsection">
+			
 		</div>
 	</div>
 
