image js added and fixed

--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
 
 </head>
 <body>
-	
-	<!--   
-	<div class="banner">
-		<img src="images/gameofthrones_banner.jpg" width="700px">
+	<div class="header">
+		<img src="images/gameofthrones_banner.jpg">
 	</div>
-	-->
 
 	<div class="container">
-		<div class="rtsection">		
 
-			<div>
-				<h1>Let's play Game of Thrones hangman</h1> 
-			</div>		
+		<div class="lftsection">		
+
+		
 			<div>
 				<h2>Length of word</h2>	
 				<div id="wordSelect"></div>
@@ -39,7 +35,7 @@
 		
 		</div> 
 
-		<div class="lftsection">
+		<div class="rtsection">
 			
 			<div id="gameStatusImg"> </div>
 
