--- a/index.html
+++ b/index.html
@@ -6,28 +6,38 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Cinzel+Decorative" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Cinzel+Decorative|Metamorphous" rel="stylesheet">
 
 </head>
 <body>
 	<div class="header">
-		<img src="images/gameofthrones_banner.jpg">
+		<img src="images/Logo_Game_of_Thrones.png">
+		<div class="hmtext">
+			<h1>Hangman</h1>
+		</div>
 	</div>
 
 	<div class="container">
 
 		<div class="lftsection">		
+			
+			<div class="gameStateTxt">
+				<h2><span id=gameStatusTxt></span></h2>
+			</div>
 
 		
 			<div>
 				<h2>Length of word</h2>	
 				<div id="wordSelect"></div>
 			</div>	
+			
 			<div>
-				<h2>Selected keys: <span id=userChoice></span></h2>
+				<h2>Letter Selected: <span id=userChoice></span></h2>
 			</div>
+			
 			<div>
-				<p>All characters selected: <span id="alphaUsed"></span></p>
+				<h2>All characters selected: </h2>
+				<p><span id="alphaUsed"></span></p>
 			</div>
 			<div>
 				<p>Moves Left: <span id="movesLeft"></span></p>
@@ -40,6 +50,7 @@
 			<div id="gameStatusImg"> </div>
 
 		</div>
+	
 	</div>
 
 	<script type="text/javascript" src="javascript/game.js"></script>
