Clarified game reset

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 				<p><span id="alphaUsed"></span></p>
 			</div>
 			<div>
-				<p>Moves Left: <span id="movesLeft"></span></p>
+				<p>Moves left 'til you die:  <span id="movesLeft"></span></p>
+			</div> 
+
+			<div>
+				<p>Press F5 to restart game.</p>
 			</div>
 		
 		</div> 
